Reduce the z-index and fix the usage of icons

--- a/src/components/multiStep/multiStep.css
+++ b/src/components/multiStep/multiStep.css
@@ -16,7 +16,7 @@
   flex-flow: row nowrap;
   justify-content: space-between;
   position: relative;
-  z-index: 999;
+  z-index: 9;
 
   & > section {
     align-self: flex-end;
